kustomize/overlays/prod/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        version: v2
    spec:
      containers:
      - name: backend-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        version: v2
